# porter

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml  manual.yml  publish_v3.yml
src/: images.html  images.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: colorgrid.html  image.html  item.html  page.html
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  declare.rs  error.rs  html.rs  images.rs  imgutil.rs  lib.rs  main.rs  webper.rs
