[package]
name = "porter"
version = "1.1.0"
description = "An application that lets you update your website."
authors = ["Miel Peeters"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[profile.release]
strip = true

[dependencies]
tauri = { version = "1.4", features = [
    "path-all",
    "dialog-ask",
    "dialog-open",
    "dialog-save",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2.2"
toml = "0.7.6"
markdown = "1.0.0-alpha.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
